mdapi/objects/DealRegistration__c.object
<CustomObject>
    <fields>
        <fullName>DomainAccount__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Lead__r.Additional_Domain__r.Account__r.Id , Lead__r.Additional_Domain__r.Account__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Domain Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Lead__r.Additional_Domain__r.Id, Lead__r.Additional_Domain__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndUserAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deal Registrations</relationshipLabel>
        <relationshipName>Deal_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EndUserOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Deal Registrations</relationshipLabel>
        <relationshipName>DealRegistrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExpirationDate__c</fullName>
        <defaultValue>today()+30</defaultValue>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Deal Registrations</relationshipLabel>
        <relationshipName>DealRegistrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QualifiedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Qualified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DealRegistrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QualifiedDate__c</fullName>
        <label>Qualified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ResellerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reseller Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reseller Deal Registrations</relationshipLabel>
        <relationshipName>ResellerDealRegistrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ResellerContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reseller Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Reseller Deal Registrations</relationshipLabel>
        <relationshipName>ResellerDealRegistrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                    <default>true</default>
                    <label>Pending Approval</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SystemStatus__c</fullName>
        <formula>if( 
ISBlank(Lead__c), 
&quot;nolead&quot;, 
if( 
Lead__r.IsConverted, 
if( 
ISBlank(EndUserOpportunity__c), 
&quot;noopp&quot;, 
if( 
EndUserOpportunity__r.IsClosed, 
if( 
EndUserOpportunity__r.IsWon, 
&quot;won&quot;, 
&quot;lost&quot; 
), 
&quot;working&quot; 
) 
), 
if( 
Lead__r.IsDisqualified__c, 
&quot;rejected&quot;, 
&quot;new&quot; 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Status</label>
        <type>Text</type>
    </fields>
    <label>Deal Registration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EndUserAccount__c</columns>
        <columns>EndUserOpportunity__c</columns>
        <columns>Lead__c</columns>
        <columns>ResellerAccount__c</columns>
        <columns>ResellerContact__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Deal_Reg_View_with_System_Status</fullName>
        <columns>NAME</columns>
        <columns>EndUserAccount__c</columns>
        <columns>EndUserOpportunity__c</columns>
        <columns>Lead__c</columns>
        <columns>ResellerAccount__c</columns>
        <columns>ResellerContact__c</columns>
        <columns>Status__c</columns>
        <columns>SystemStatus__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Deal Reg View with System Status</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_Deal_Reg_View_with_System_Status</fullName>
        <columns>NAME</columns>
        <columns>EndUserAccount__c</columns>
        <columns>EndUserOpportunity__c</columns>
        <columns>Lead__c</columns>
        <columns>ResellerAccount__c</columns>
        <columns>ResellerContact__c</columns>
        <columns>Status__c</columns>
        <columns>SystemStatus__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SystemStatus__c</field>
            <operation>equals</operation>
            <value>new</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected</value>
        </filters>
        <label>New Deal Reg View with System Status</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>DealRegistration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deal Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>